subi la barra buscador y cambie tamaño de letra de usuario

--- a/concentrado.html
+++ b/concentrado.html
@@ -16,7 +16,7 @@
     <div class="container">
       <header class="navbar navbar-fixed">
         <div class="navbar-header">
-        <div class="profile">
+        <div class="profile col-sm-3">
               <img class="avatar" style="width:50px;border-radius:60%">
               <B><align="left" class="name">Username</B>    
         </div>
@@ -29,7 +29,7 @@
           $('.name').textContent = profile.nickname;
         }
         </script>
-        <div class="input-group col-sm-2">
+        <div class="input-group col-sm-8">
           <input type="text" class="form-control" id="search" placeholder="Buscar" onkeyup="buscar()" data-toggle="tooltip" data-placement="bottom" title="Pegar Ctrl+V">
           <span class="input-group-btn">
             <button class="btn btn-default" type="button">
