re-cifrar contraseñas

--- a/concentrado.html
+++ b/concentrado.html
@@ -41,7 +41,7 @@
             read();
             reg_time();
             setTimeout(function(){ ck_time() }, 1000);        
-            setInterval(function(){ timeout() }, 300000);
+            setTimeout(function(){ timeout() }, 150000);
           </script>
         </table>
        </form>         
