--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/webSQL.js"></script>
+    <script src="js/key-gen.js"></script>
   </head>
    <body>
    <br>
@@ -32,16 +35,15 @@
        </div>
        <div class="form-group">
             <label for="contraseña">Contraseña:</label>
-            <input class="form-control" id="contraseña" type="password">
+            <input class="form-control" id="pass" type="password">
        </div>
     </form>
     <br>
     <br>
-        <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
+        <button onclick="verif_usr(usuario, pass)" type"submit" class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button>
         <a href="sing_up.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button></div></a>
     </div>
   </div>  
   <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
