--- a/sing_up.html
+++ b/sing_up.html
@@ -42,9 +42,9 @@
        <div class="form-group" id="tooltip">
         <span id="tooltiptext">Las contraseñas no son iguales</span>
         <label for="pass">Contraseña:</label>
-        <input class="form-control" id="pass" type="password" onclick="hide()" required>
+        <input class="form-control" id="pass" type="password" onclick="hide()">
         <label for="pass1"></label>
-        <input class="form-control" id="pass1" type="password" onclick="hide()" placeholder="Verificar contraseña" required>
+        <input class="form-control" id="pass1" type="password" onclick="hide()" placeholder="Verificar contraseña">
        </div>        
     </form>
     </div>
