--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/webSQL.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
   </head>
    <body>
@@ -26,18 +27,19 @@
     <br>
     <br>
     <form action="">
-       <div class="form-group">
-            <label for="usuario">Usuario:</label>
-            <input class="form-control" id="usuario" type="text" autocomplete="on">
+       <div class="form-group" id="tooltip">
+       <span id="tooltiptext">El usuario o contraseña son incorrectos</span>
+        <label for="usuario">Usuario:</label>
+        <input class="form-control" id="usuario" type="text" autocomplete="on" onclick="hide()">
        </div>
        <div class="form-group">
-            <label for="contraseña">Contraseña:</label>
-            <input class="form-control" id="contraseña" type="password">
+        <label for="contraseña">Contraseña:</label>
+        <input class="form-control" id="contraseña" type="password" onclick="hide()">
        </div>
     </form>
     <br>
     <br>
-        <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
+        <button onclick="login(usuario, contraseña)" type="submit" class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button>
         <a href="sing_up.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button></div></a>
     </div>
   </div>  
