--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </form>
     <br>
     <br>
-        <button onclick="login(usuario, contraseña)" type="submit" class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button>
+        <button onclick="login(usuario, contraseña)" type="submit" class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesión</button>
         <a href="sing_up.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button></div></a>
     </div>
   </div>  
