--- a/sing_up.html
+++ b/sing_up.html
@@ -34,17 +34,18 @@
     <br>
     <div class="container">
     <br>
-    <form name="Usr-form">
-       <div class="form-group">
-        <label for="usr">Usuario:</label>
-        <input class="form-control" id="usr" type="email" placeholder="email">
-       </div>
+    <form name="">
        <div class="form-group" id="tooltip">
-        <span id="tooltiptext">Las contraseñas no son iguales</span>
+       <span id="tooltiptext">Debe ser un email</span>
+        <label for="usr">Usuario:</label>
+        <input class="form-control" id="usr" type="email" data-toggle="tooltip" data-placement="bottom" title="Introduce tu email" onclick="hide()">
+       </div>
+       <div class="form-group" id="tooltip2">
+        <span id="tooltiptext2">Las contraseñas no son iguales</span>
         <label for="pass">Contraseña:</label>
-        <input class="form-control" id="pass" type="password" onclick="hide()">
+        <input class="form-control" id="pass" type="password" data-toggle="tooltip" data-placement="bottom" title="Mínimo 6 caracteres" onclick="hide()">
         <label for="pass1"></label>
-        <input class="form-control" id="pass1" type="password" onclick="hide()" placeholder="Verificar contraseña">
+        <input class="form-control" id="pass1" type="password" data-toggle="tooltip" data-placement="bottom" title="Mínimo 6 caracteres" onclick="hide()" placeholder="Verificar contraseña">
        </div>        
     </form>
     </div>
